HUB-830: Fixing a bug where node revision view would throw a php error on some occasions. Also fixing a layout bug on revision views.

--- a/themes/uhsg_theme/css/style.css
+++ b/themes/uhsg_theme/css/style.css
@@ -8901,9 +8901,9 @@ li.avatar.avatar--default img {
 }
 
 #copy-url {
-  float: right;
-  position: relative;
+  position: absolute;
   z-index: 500;
+  right: 0;
   margin-right: 0;
   min-width: 10em;
 }
